fix(user):修复数据表中的错误测试数据
